# mosaical-demo

./: .gitignore  .replit  README.md  documentation.md  pyproject.toml  requirements.txt  todo.md
attached_assets/: Pasted--NoReverseMatch-at-dashboard-Reverse-for-switch-currency-not-found-switch-currency-is-not-a-1750529326006_1750529326007.txt  Pasted--OperationalError-at-dashboard-no-such-column-mosaical-platform-userprofile-dpsv-balance-Reque-1750529240572_1750529240573.txt  Pasted--c-t-m-h-nh-DYBF-Dynamic-Yield-Backed-NFT-Financing-1-M-c-ti-u-c-t-l-i-X-y-d-ng-m-t-n-n-t-ng-c-1748355524697.txt  Pasted--workspace-python-manage-py-makemigrations-Traceback-most-recent-call-last-File-home-runn-1748360499083.txt  Pasted--workspace-python3-manage-py-makemigrations-Traceback-most-recent-call-last-File-home-run-1748363289678.txt  Pasted-1-T-n-D-n-Project-Name-Mosaical-NFT-Lending-Platform-Phi-n-b-n-m-ph-ng-n-i-b-s-d-ng-vBTC-m-1748355096421.txt  Pasted-M-H-NH-NH-GI-NFT-V-K-T-QU-NG-D-NG-TH-C-T-I-C-NG-TH-C-D-O-N-GI-NFT-C-NG-TH-C-T-NG-QU-T--1748360086608.txt  Pasted-TemplateSyntaxError-at-loans-create-Invalid-filter-mul-Request-Method-GET-Request-URL-http-1750582500626_1750582500627.txt  Pasted-element-style-btn-primary-background-linear-gradient-45deg-005cca-0066dd-b-1750582191923_1750582191924.txt
django_project/: settings.py  urls.py
mosaical_platform/: admin.py  admin_views.py  ai_analytics.py  ai_models.py  apps.py  audit.py  consumers.py  error_handlers.py  middleware.py  models.py  monitoring.py  notifications.py  reports.py  urls.py  utils.py  valuation_oracle.py  (+1 more)
(+29 files in other folders)
